<resources>
    <string name="app_name">TodoApp</string>
    <string name="app_welcome">Bienvenido</string>
    <string name="app_categoryTitle">Categorias:</string>
    <string name="app_tasksTitle">Tareas:</string>
    <string name="app_businessTitle">Business</string>
    <string name="app_personalTitle">Personal</string>
    <string name="app_otherTitle">Other</string>
    <string name="app_dialog_add_task">Añade nueva tarea</string>
    <string name="app_rb_business">Business</string>
    <string name="app_rb_personal">Personal</string>
    <string name="app_rb_other">Other</string>
    <string name="app_btn_add_task">Añadir tarea</string>
</resources>