<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todo_app"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/app_dialog_add_task"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/app_rb_business"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:text="@string/app_rb_personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:text="@string/app_rb_other"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/app_btn_add_task"
        android:textColor="#000000" />

</LinearLayout>